--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -28,6 +28,46 @@ jobs:
         Write-Host "Building release for version: $version"
         echo "version=$version" >> $env:GITHUB_OUTPUT
     
+    - name: Check if release already exists
+      id: check_release
+      run: |
+        $version = "${{ steps.get_version.outputs.version }}"
+        $tagName = "v$version"
+        
+        # Fetch tags from remote to ensure we have the latest
+        git fetch --tags --quiet 2>$null
+        
+        # Check if tag exists locally
+        $tagExists = $false
+        try {
+          $result = git rev-parse --verify "refs/tags/$tagName" 2>$null
+          if ($LASTEXITCODE -eq 0) {
+            $tagExists = $true
+          }
+        } catch {
+          $tagExists = $false
+        }
+        
+        # If not found locally, check remote
+        if (-not $tagExists) {
+          try {
+            $remoteResult = git ls-remote --tags origin "$tagName" 2>$null
+            if ($remoteResult -and $remoteResult.Length -gt 0 -and $remoteResult -match $tagName) {
+              $tagExists = $true
+            }
+          } catch {
+            $tagExists = $false
+          }
+        }
+        
+        if ($tagExists) {
+          Write-Host "Release tag $tagName already exists. Skipping release creation."
+          echo "should_create_release=false" >> $env:GITHUB_OUTPUT
+        } else {
+          Write-Host "Release tag $tagName does not exist. Will create new release."
+          echo "should_create_release=true" >> $env:GITHUB_OUTPUT
+        }
+    
     - name: Create logs directory
       run: |
         if (-not (Test-Path "logs")) {
@@ -80,6 +120,7 @@ jobs:
     
     - name: Collect commits for release notes
       id: collect_commits
+      if: steps.check_release.outputs.should_create_release == 'true'
       run: |
         # Try to find the last release tag
         $lastTag = $null
@@ -118,6 +159,7 @@ jobs:
         "EOF" | Out-File -FilePath $env:GITHUB_OUTPUT -Encoding utf8 -Append
     
     - name: Create Release
+      if: steps.check_release.outputs.should_create_release == 'true'
       run: |
         $version = "${{ steps.get_version.outputs.version }}"
         $exeName = "${{ steps.build_executable.outputs.exe_name }}"
